# pharus

./: Cargo.toml  README.md
fixture/: artifact-testnet.wasm
src/: args.rs  contract.rs  evm.rs  main.rs  networks.rs  stellar.rs  wasm.rs
