[package]
name = "pharus"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
soroban-cli = "22.0.4"
tokio = { version = "1.0", features = ["full", "test-util"] }
sha2 = "0.10.8"
serde_json = "1.0"
alloy-provider = "0.9"
alloy-primitives = "0.8"
hex = "0.4"
reqwest = "0.12"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }